dmz/longhorn/templates/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-ingress
  annotations:
    cert-manager.io/cluster-issuer: vault-issuer
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`longhorn.dmz.durp.info`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: longhorn-frontend
      port: 80
  tls:
    secretName: longhorn-tls
